--- a/styles.css
+++ b/styles.css
@@ -31,14 +31,54 @@ div#info-actions{
 }
 
 .logo{
-    border: 1.5px solid gray;
-    border-radius: 15px;
     margin: 1rem;
     width: 10%;
     height: 5%;
 }
 
 #login{
+    margin-top: 20px;
+    margin-right: 20px;
+}
+
+#logo-ig{
+    width: 2%;
+    height: 2%;
     margin-top: 25px;
     margin-right: 20px;
+}
+
+#logo-fb{
+    width: 2%;
+    height: 2%;
+    margin-top: 25px;
+    margin-right: 20px;
+}
+
+ul
+{
+list-style-type: none;
+padding: 0;
+margin: 0;
+text-align: right;
+}
+
+li
+{
+background-image: url(arrow.gif);
+background-repeat: no-repeat;
+background-position: 100% .4em;
+padding-right: .6em;
+}
+
+#logo-conicet{
+    width: 8%;
+    height: 8%;
+    margin-top: 25px;
+}
+
+#logo-unl{
+    width: 5%;
+    height: 5%;
+    margin-top: 25px;
 }
