--- a/styles.css
+++ b/styles.css
@@ -46,30 +46,25 @@ div#profile-background img{
     z-index: 1;
 }
 
-.logo{
-    margin-top: 15px;
+.logo-arg-prog{
     margin-left: 20px;
-    width: 10%;
-    height: 5%;
 }
 
 #login{
     margin-top: 25px;
-    margin-right: 20px;
+    margin-right: 10px;
     border: 3px solid;
+    width: 4.5rem;
+    height: 2.5rem;
 }
 
 #logo-ig{
-    width: 3%;
-    height: 3%;
     margin-top: 25px;
     margin-right: 20px;
 }
 
 #logo-fb{
-    width: 3%;
-    height: 3%;
-    margin-top: 25px;
+    margin-top: 26px;
     margin-right: 20px;
 }
 
@@ -88,20 +83,14 @@ padding-right: .6em;
 }
 
 #logo-conicet{
-    width: 8%;
-    height: 8%;
     margin-top: 25px;
 }
 
 #logo-unl{
-    width: 5%;
-    height: 5%;
     margin-top: 25px;
 }
 
 #logo-unl-2{
-    width: 8%;
-    height: 8%;
     margin-left: 20px;
     margin-right: 20px;
     margin-bottom: 15px;
@@ -109,8 +98,6 @@ padding-right: .6em;
 }
 
 #logo-intec{
-    width: 8%;
-    height: 8%;
     margin-top: 10px;
     margin-left: 20px;
     margin-right: 20px;
@@ -119,8 +106,6 @@ padding-right: .6em;
 }
 
 #logo-arg-programa-2{
-    width: 8%;
-    height: 8%;
     margin-left: 20px;
     margin-right: 20px;
     margin-bottom: 15px;
@@ -128,8 +113,6 @@ padding-right: .6em;
 }
 
 #logo-rg{
-    width: 5%;
-    height: 5%;
     margin-left: 20px;
     margin-right: 55px;
     margin-bottom: 15px;
