--- a/styles.css
+++ b/styles.css
@@ -42,7 +42,8 @@ div#profile-background img{
     border-radius: 50%;
     margin-top: -110px;
     z-index: 1;
-    width: 15%;
+    max-width: 100%;
+    height: auto;
 }
 
 .logo-arg-prog{
